--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/smartwaste
-JWT_SECRET=smartwaste_secret_key
+
+MONGO_URI=mongodb+srv://uncwambui_db_user:e254@cluster0.a2doynq.mongodb.net/smartwaste?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=mysupersecretjwtkey123
